--- a/wavefront/templates/collector-config.yaml
+++ b/wavefront/templates/collector-config.yaml
@@ -93,6 +93,11 @@ data:
       internal_stats_source:
         prefix: kubernetes.
 
+      {{- if .Values.collector.systemdMetrics }}
+      systemd_source:
+        taskMetrics: true
+      {{- end }}
+
       {{- if .Values.collector.kubernetesState }}
       kubernetes_state_source:
         prefix: kubernetes.
